[tool.poetry]
name = "dx"
version = "0.1.0"
description = ""
authors = ["Md Shahriyar Alam <contact@shahriyar.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.6"
asyncclick = "^8.1.3.4"
anyio = "^4.0.0"
halo = "^0.0.31"
rich = "^13.7.0"
python-dotenv = "^1.0.0"


pyperclip = "^1.8.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dx = "dx:dx"